package au.com.codeka.warworlds.common.proto;

import "au/com/codeka/warworlds/common/proto/common.proto";
import "au/com/codeka/warworlds/common/proto/star.proto";

//
// Details of an empire's rank (such as number of ships, number of colonies etc)
message EmpireRank {
  optional int64 empire_id = 1;
  optional int32 rank = 2;
  optional int32 last_rank = 3;
  optional int32 total_stars = 4;
  optional int32 total_colonies = 5;
  optional int32 total_ships = 6;
  optional int32 total_buildings = 7;
  optional int32 total_population = 8;
}

message EmpireRanks {
  repeated EmpireRank ranks = 1;
  optional int64 date = 2;
}

// Contains details about an empire. Their "display" name, race (I guess?), display colour
// and stuff like that.
message Empire {
  // A unique identifier for the empire, useful for referencing him in other parts of the
  // system. This won't be present in the initial "PUT"
  optional int64 id = 1;

  // The "display" name for the player, which is what other players see.
  optional string display_name = 2;

  enum EmpireState {
    ACTIVE = 1;
    BANNED = 2;
    ABANDONED = 3;
  }
  optional EmpireState state = 3;

  // if specified, contains the details of the empire's rank
  optional EmpireRank rank = 4;

  // if specified, this is the empire's "home star", which is the star we should centre on when
  // we're asked to view the empire. It's usually the start that contains the HQ or, if they don't
  // have one, basically just a random star they control.
  optional Star home_star = 5;

  // if this empire is part of an alliance, this will contain the details of the alliance.
//  optional Alliance alliance = 6;

  // if set, this is the last date/time the empire's shield was updated (so we can detect if we
  // need to re-download it)
  optional int64 shield_image_last_update = 7;

  // the time we last saw this empire.
  optional int64 last_seen = 8;

  // The Patreon tier this empire is at. We'll use this to decide whether they get a decoration on
  // their shield, whether IAPs are made free, etc.
  enum PatreonTier {
    // The empire is not a Patron.
    NONE = 0;
    // The empire is at the 'fan' tier, $1.
    FAN = 1;
    // The empire is at the 'patron' tier, $5.
    PATRON = 2;
    // The empire is at the 'empire' tier, $10.
    EMPIRE = 3;
  }
  optional PatreonTier patreon_tier = 9;
}
